# LFD233-code

./: .gitignore  README.md
2.2/: README.md
2.3/: README.md
3.1/: README.md
3.1/hyper-server/: Cargo.toml
3.2/: README.md
3.2/hyper-wasi-server/: Cargo.toml
3.3/: README.md
4.1/: README.md
4.2/: README.md
4.2/dapr-rust-sdk/: Cargo.toml
4.2/page-counter/: Cargo.toml
5.2/: README.md
5.2/dapr-pubsub-publisher/: Cargo.toml
5.2/dapr-pubsub-subscriber/: Cargo.toml
5.2/dapr-pubsub-subscriber/src/: main.rs
5.3/: README.md
5.3/deployment/: app-deployment.yaml
6.1/: README.md
6.1/deployment/: Containerfile  redis-service.yaml
6.1/page-counter/: Cargo.toml
6.1/page-counter/src/: main.rs
6.2/: README.md
6.3/: Containerfile  README.md
6.3/deployment/: dapr-secret-component.yaml  k8s-deployment-service-secrets-crypt.yaml  k8s-secret.yaml
7.1/: set_config.sh
7.1/components/: redis-configstore.yaml
7.1/website-health-check/: Cargo.toml
7.2/: README.md  create_encryption_key_secret.sh
7.2/bindings/: cron-binding.yaml  psql-binding.yaml
7.2/secrets-crypt/: Cargo.toml
7.2/sql-timer-bindings/: Cargo.toml
7.2/sql-timer-bindings/src/: main.rs
8.1/: Containerfile  README.md  create-table.sql
8.2/: README.md
8.2/custom-go-middleware/: main.wasm
8.2/http-header-check/: Cargo.toml
8.3/: README.md
8.3/components/: bindigs.yaml
9.1/: README.md
9.1/components/: dapr-middleware-pipeline.yaml  dapr-wasm-middleware.yaml
9.1/custom-go-middleware/: go.mod  main.go
9.1/http-header-check/: README.md
9.2/: README.md
9.2/components/: bindigs.yaml
(+10 files in other folders)
