[package]
name = "dapr-rust-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"]}
hyper-util = { version = "0.1" , features = ["tokio"] }
anyhow = "1.0"
dapr = "0.13.0"
http-body-util = "0.1"
bytes = "1.5.0"
