[package]
name = "page-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
hyper = { version = "0.14", features = ["full"]}
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["rt", "macros", "net", "time", "io-util"]}
serde_json = "1.0"
